apps/media/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
<<<<<<< HEAD
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
=======
>>>>>>> 5bed0a0 ([media] - init media)
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - qbittorrent
                        - radarr
                        - sonarr
                topologyKey: kubernetes.io/hostname
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-data-pvc
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            # Same shared volume + path as qBittorrent and Radarr.
            # Downloads: /torrents/downloads, tv: /torrents/tv.
            - name: media
              mountPath: /torrents
