apps/media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: media-media-lan-only@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sonarr.aboft.dev
      secretName: sonarr-tls
  rules:
    - host: sonarr.aboft.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
